cmake_minimum_required(VERSION 3.8)
project(fastecpecn)

add_subdirectory(./mylib)
add_subdirectory(./mylib/crit)
add_executable(main main.cpp)
add_executable(hh hh.cpp)
add_executable(niny niny.cpp)
add_executable(factoring factoring.cpp)
add_executable(hhplus hhplus.cpp)
add_executable(crit-ecp crit-ecp.cpp)
add_executable(crit-allrel crit-allrel.cpp)

target_link_libraries(main reliabilitylib)
target_link_libraries(hh reliabilitylib)
target_link_libraries(niny reliabilitylib)
target_link_libraries(factoring reliabilitylib)
target_link_libraries(hhplus reliabilitylib ${CMAKE_SOURCE_DIR}/SAPPOROBDD/lib/BDD64.a)
target_compile_definitions(hhplus PUBLIC B_64)
find_library(ADEPTLIB NAMES adept)
target_link_libraries(crit-ecp reliability-critlib ${ADEPTLIB})
target_link_libraries(crit-allrel reliability-critlib ${ADEPTLIB})
